--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "eslint-config-google": "^0.14.0"
   },
   "dependencies": {
-    "@xmldom/xmldom": "^0.7.5"
+    "@xmldom/xmldom": ">=0.7.5"
   }
 }
